How to create a Sub-route Module

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <h1>Boilder Plate | Node Server Working</h1>
+        <h1><span style="color: green; font-size: 36px; padding: 5px; border: solid 3px #aaa; margin: 5px">Working ✓</span><br /><br />Boilder Plate | Node Server Working</h1>
         <h2>A simple Boiler plate node server. ES6 enabled by babel</h2>
         <pre>
             import config from './config';
